<resources>
    <string name="app_name">PokemonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
        <item>N/A</item>
    </string-array>
</resources>